[package]
name = "sdf3d"
version = "0.1.0"
authors = ["Masterchef365 <duncan.freeman1@gmail.com>"]
edition = "2018"

[dependencies]
#klystron = { path = "../klystron" }
klystron = { git = "https://github.com/Masterchef365/klystron", branch = "sdf_compat" }
anyhow = "1"
notify = "4.0"
structopt = { version = "0.3", default-features = false }
shaderc = "0.7"
